--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
 
   <header>
-    <h1>Welcome to My Beautiful Website</h1>
+    <h1>Jenkins Tutorial</h1>
     <p>A clean and simple HTML layout</p>
   </header>
 
